# oc_validator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
oc_validator/: __init__.py  cli.py  csv_wellformedness.py  helper.py  id_existence.py  id_syntax.py  id_type_alignment.json  lmdb_cache.py  main.py  semantics.py  table_reader.py
oc_validator/interface/: __init__.py  gui.py  invalid_template.j2  run_gui.py  script.js  style.css
tests/: test_csv_wellformedness.py  test_helper.py  test_id_existence.py  test_id_syntax.py  test_lmdb_cache.py  test_main.py  test_semantics.py  test_table_reader.py
tests/test_data/: invalid_cits_mock_report.jsonl  invalid_meta_mock_report.jsonl  valid_cits_2col_mock.csv
